# black-box

./: CMakeLists.txt
date/: test.json
jrlcClient/: CMakeLists.txt  TCPClient.cpp  TCPClient.hpp
jrlcServer/: CMakeLists.txt  TCPServer.cpp  TCPServer.hpp
src/: Msg.cpp  Msg.hpp
